# actix-seaorm-auth-starter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  compose.yml
.aichat/: config.yaml
.aichat/roles/: dmmf-architect.md
app/: Cargo.toml
app/src/: telemetry.rs
libs/api/: Cargo.toml
libs/api/src/: error.rs  lib.rs  middleware.rs  openapi.rs  routes.rs  shared.rs
libs/api/src/admin/: mod.rs  routes.rs
libs/api/src/admin/user_management/: mod.rs  routes.rs
libs/api/src/admin/user_management/list_users/: handler.rs  request.rs  response.rs
libs/api/src/admin/user_management/suspend_user/: handler.rs  request.rs  response.rs
libs/api/src/auth/: error.rs  handler.rs  mod.rs  routes.rs
libs/api/src/auth/login/: handler.rs  mod.rs  request.rs  response.rs
libs/api/src/auth/signup/: handler.rs  mod.rs  request.rs  response.rs
libs/api/src/user/: error.rs  handler.rs  mod.rs  routes.rs
libs/api/src/user/get_own_profile/: handler.rs  mod.rs  request.rs  response.rs
libs/api/src/user/get_profile/: handler.rs  mod.rs  request.rs  response.rs
libs/api/src/user/list_users/: handler.rs  mod.rs  request.rs  response.rs
libs/api/src/user/suspend_user/: handler.rs  request.rs  response.rs
libs/api/src/user/update_email/: handler.rs  request.rs  response.rs
libs/api/src/user/update_profile/: handler.rs  mod.rs  request.rs  response.rs
libs/domain/: Cargo.toml
libs/domain/src/: lib.rs  repository.rs  transaction.rs
libs/domain/src/auth/: mod.rs  policy.rs
libs/domain/src/auth/policies/: activate_user.rs  change_email.rs  deactivate_user.rs  find_user_by_id.rs  find_user_by_id_for_suspend.rs  list_users.rs  mod.rs  promote_to_admin.rs  suspend_user.rs  unlock_user.rs  update_profile.rs  view_detailed_profile.rs  view_own_profile.rs  view_profile.rs  view_public_profile.rs
libs/domain/src/shared/: domain_event.rs  mod.rs  outbox.rs
libs/domain/src/shared/outbox_event/: entity.rs  entity_with_events.rs  error.rs  mod.rs  repository.rs  service.rs
libs/domain/src/shared/outbox_event/value_objects/: mod.rs  outbox_event_id.rs
libs/domain/src/shared/service/: clock.rs
libs/domain/src/user/: entity.rs  error.rs  events.rs  factory.rs  mod.rs  repository.rs  service.rs
libs/domain/src/user/value_objects/: email.rs  mod.rs  password.rs  role.rs  user_id.rs
libs/domain_macros/derive_entity/: Cargo.toml
libs/domain_macros/derive_entity/src/: lib.rs
libs/domain_macros/derive_entity/tests/: behavior.rs  ui.rs
libs/domain_macros/domain_objects/: Cargo.toml
libs/domain_macros/domain_objects/src/: lib.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: lib.rs
libs/infrastructure/src/auth/argon2/: password_service.rs
libs/infrastructure/src/email_service/: mod.rs
libs/infrastructure/src/email_service/stub_email_service/: email_service.rs
libs/infrastructure/src/outbox_event/: mod.rs  outbox_event_id_generator.rs
libs/infrastructure/src/persistence/: db_error_mapper.rs  mod.rs
libs/infrastructure/src/persistence/seaorm/: connect.rs  db_error_mapper_impl.rs  mod.rs  relay.rs  transaction.rs
libs/infrastructure/src/persistence/seaorm/entities/: mod.rs  outbox.rs  prelude.rs
libs/infrastructure/src/persistence/seaorm/repository/: mod.rs  outbox_repository.rs  user_repository.rs
libs/infrastructure/src/relay/: mod.rs
libs/infrastructure/src/relay/next_attempt_calculator/: backoff_next_attempt_calculator.rs  mod.rs
libs/infrastructure/src/shared/: clock.rs  mod.rs  uuid.rs
libs/infrastructure/src/user/: uuid_generator.rs
libs/relay/: Cargo.toml
libs/relay/src/: config.rs  lib.rs
libs/usecase/: Cargo.toml
libs/usecase/src/: lib.rs  usecase_error.rs
libs/usecase/src/auth/: dto.rs  error.rs  interactor.rs  mod.rs  service.rs  token_interactor.rs  token_service.rs
libs/usecase/src/relay/: error.rs  event_handler.rs  event_mapper.rs  handler_factory.rs  interactor.rs  mod.rs  service.rs
libs/usecase/src/relay/event_handler_impl/: mod.rs  send_email_when_user_created.rs  send_email_when_user_deactivated.rs  send_email_when_user_email_changed.rs  send_email_when_user_reactivated.rs  send_email_when_user_suspended.rs  send_email_when_user_unlocked.rs  send_email_when_user_username_changed.rs
libs/usecase/src/relay/handler_factory_impl/: mod.rs  user_created_factory.rs  user_deactivated_factory.rs  user_email_changed_factory.rs  user_email_verified_factory.rs  user_promoted_to_admin_factory.rs  user_reactivated_factory.rs  user_suspended_factory.rs  user_unlocked_factory.rs  username_changed_factory.rs
libs/usecase/src/shared/: email_service.rs  identity.rs  mod.rs  relay.rs
libs/usecase/src/shared/event_handler/: mod.rs  send_email_when_user_created.rs  send_email_when_user_deactivated.rs  send_email_when_user_email_changed.rs  send_email_when_user_reactivated.rs  send_email_when_user_suspended.rs  send_email_when_user_unlocked.rs  send_email_when_user_username_changed.rs
libs/usecase/src/user/: dto.rs  error.rs  interactor.rs  mod.rs  service.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251219_072129_create_user_table.rs  m20251224_071855_add_role_to_user.rs  m20260104_042952_replace_is_active_with_status.rs  m20260107_121138_create_outbox_table.rs  m20260203_134756_add_retry_fields_to_outbox.rs  m20260204_152948_normalize_outbox_status.rs
migration/src/constants/: indices.rs  mod.rs  unique_constraints.rs
relay/: Cargo.toml
relay/src/: config.rs  lib.rs
src/: main.rs  telemetry.rs
src/api/: error.rs  middleware.rs  mod.rs
src/api/auth/: error.rs  handler.rs
src/api/user/: error.rs  handler.rs
src/domain/: mod.rs  repository.rs  transaction.rs
src/domain/auth/: policy.rs
src/domain/user/: entity.rs  error.rs  mod.rs  repository.rs  service.rs  value_object.rs
src/domain/user/value_objects/: email.rs  password.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/argon2/: password_service.rs
src/usecase/auth/: dto.rs  error.rs  mod.rs  service.rs  token_service.rs
src/usecase/user/: dto.rs  error.rs  service.rs
(+7 files in other folders)
