[package]
name = "myapp"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.12.1"
argon2 = "0.5.3"
async-trait = "0.1.89"
chrono = "0.4.42"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
derive_more = { version = "2.1.1", features = ["display"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.17"
futures-util = "0.3.31"
strum = { version = "0.27.2", features = ["derive"] }

# ログ記録のファサード
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# OTel との架け橋
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.28"

# Actix Web 専用の統合
tracing-actix-web = "0.7"
anyhow = "1.0.100"
