[package]
name = "myapp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "myapp"
path = "src/bin/main.rs"

[workspace]
members = [
    "libs/domain",
    "libs/usecase",
    "libs/infrastructure",
    "libs/api",
    "libs/relay",
    "libs/domain_macros/domain_objects",
    "libs/domain_macros/derive_entity",
    "app",
    "migration",
]

[workspace.dependencies]
# 内部クレート
domain = { path = "libs/domain" }
usecase = { path = "libs/usecase" }
infrastructure = { path = "libs/infrastructure" }
api = { path = "libs/api" }
relay = { path = "libs/relay" }
domain_objects = { path = "libs/domain_macros/domain_objects" }
derive_entity = { path = "libs/domain_macros/derive_entity" }
app = { path = "app" }
migration = { path = "migration" }
# 外部ライブラリ (バージョンの一元管理)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
async-trait = "0.1.89"
derive_more = { version = "2.1.1", features = ["display", "from", "into", "as_ref"] }
validator = { version = "0.20.0", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
tracing = "0.1"
opentelemetry = { version = "0.27", features = ["trace"] }
tracing-opentelemetry = "0.28"
futures-util = "0.3.31"
sea-orm = { version = "1.1.19", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
] }
actix-web = "4.12.1"
tokio = "1.49.0"
tokio-util = "0.7.18"
rstest = "0.26.1"
syn = { version = "2.0.114", features = ["extra-traits"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
trybuild = "1.0.114"

[dependencies]
infrastructure = { workspace = true }
api = { workspace = true }
app = { workspace = true }
relay = { workspace = true }
sea-orm = { workspace = true }
actix-web = { workspace = true }
tokio-util = { workspace = true }

tracing-actix-web = "0.7"
dotenvy = "0.15.7"
