[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
usecase = { workspace = true }
infrastructure = { workspace = true }
api = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.28"