[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
usecase = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
actix-web = { workspace = true }
uuid = { workspace = true }
derive_more = { workspace = true }
strum = { workspace = true }
utoipa = { workspace = true, optional = true }

[features]
default = []
api-docs = ["utoipa"]
