[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
usecase = { workspace = true }
migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
argon2 = "0.5.3"
