[package]
name = "usecase"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
validator = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
